add tour report
